# sloes

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cert.rs  config.rs  error.rs  main.rs  proxy.rs  storage.rs
src/storage/: config.rs  mod.rs  project.rs
ui/: Cargo.toml
ui/src/: lib.rs  sluus_ui.rs
ui/src/components/: header.rs  mod.rs  proxy_page.rs
ui/src/types/: message.rs  mod.rs  pages.rs
