[package]
name = "sluus"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ui"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive", "env"] }
futures = { version = "0.3.29", default-features = false, features = [
    "std",
    "async-await",
] }
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = [
    "full",
], default-features = false }
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", default-features = false, features = [
    "sync",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.4.1"

sluus_ui.path = "ui"
http-body-util = "0.1.0"
rcgen = "0.11.3"
hyper-rustls = "0.24.2"
